--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07s-G5-KOy">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" image="slowButton">
+                                <state key="normal" image="slowButton2">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -238,7 +238,7 @@
         <image name="darthVader" width="100" height="100"/>
         <image name="microphone2" width="100" height="100"/>
         <image name="rabbitButton" width="100" height="100"/>
-        <image name="slowButton" width="100" height="100"/>
+        <image name="slowButton2" width="100" height="100"/>
         <image name="stopButton" width="50" height="50"/>
     </resources>
 </document>
